<resources>
    <string name="app_name">Eventer</string>
    <string name="facebook_app_id">214793839083213</string>
    <string name="fb_login_protocol_scheme">fb214793839083213</string>
    <string name="welcome">Welcome</string>
    <string name="new_group">New Group</string>

    <string name="title_activity_new_group">Create New Group</string>
    <string name="title_activity_new_event">Create New Event</string>
    <string name="title_activity_new_request">Create New Item Request</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_title">Select Title</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="choose_date">Choose Date</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="failed_to_load_image">Failed To Load Image</string>
    <string name="no_friends_to_add">You don\'t have any friends to add!</string>
    <string name="add_group_member">Add Group Member</string>
    <string name="title_leave_group">Leave Group</string>
    <string name="create_image_file_error">Error while creating a image file.</string>
    <string name="error_loading_image">Error with loading image</string>
    <string name="select_group">Select Group</string>
    <string name="select_event_date">Select event date</string>
    <string name="select_item_name">Select item name</string>
    <string name="update_item_requeset">Update Item Request</string>
    <string name="edit_your_requeset">You can only edit your requests</string>
    <string name="failed_to_remove_item_request">Failed to remove item request</string>
    <string name="title_delete_item_request">delete item</string>
    <string name="hyphen">-</string>

</resources>
